--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = python3.7, python3.8, python3.9
+envlist = python3.11, python3.12
 
 [gh-actions]
 python = 
-    3.8: python3.8
-    3.9: python3.9
+    3.11: python3.11
+    3.12: python312
 
 [testenv]
 deps = -rrequirements_dev.txt
